# robotic_car

./: .gitignore  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
dev/: pyproject.toml
pi_zero/: flow_matching_test.py  pi_model.py  pi_trainer.py  vlm_manual_check.py  vlm_test.py
robotic_car/: camera.py  car.py  controller.py  controller_utils.py  data_collection.py  pi_controller.py
scripts/: pi_train_on_driving_data.py  pi_training_test.py  preprocess_train_data.py
