[project]
name = "robotic_car"
version = "0.1.0"
description = "A ROS2 package and Pi Zero model"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "pyright",
    "ruff",
    "pre-commit",
    "setuptools",
    "pyserial",
    "opencv-python",
    "torch",
    "pillow",
    "accelerate",
    "transformers",
    "tqdm>=4.65.0",
    "matplotlib",
    "mlflow",
    "torchvision",
    "sentencepiece",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
course-builder = "robotic_car.__main__:main"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
# Point Pyright at ROS2 packages for IntelliSense
extraPaths = [
    "/opt/ros/kilted/lib/python3.12/site-packages",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["robotic_car/test"]
